Fix side margins on About when on mobile

--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -35,8 +35,8 @@ div.about__container{
   border-radius: 10px;
   padding: 16px;
   @media screen and (any-hover: none) {
-    margin-left: 5em;
-    margin-right: 5em;
+    margin-left: 1em;
+    margin-right: 1em;
   }
   background-color: rgba(67, 90, 111, 0.7);
 }
